--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,13 +4,13 @@
 
 ## 目錄
 
-- [前言](Preface/index)
-- [第1章：熱身與準備活動](Chapter1-WarmUpAndPreparation/index)
-- [第2章：基本動作與技巧](Chapter2-BasicTechniques/index)
-- [第3章：發球與接發球](Chapter3-ServingAndReceiving/index)
-- [第4章：網前截擊與防守](Chapter4-VolleyAndDefense/index)
-- [第5章：進階技巧與戰術](Chapter5-AdvancedTechniquesAndTactics/index)
-- [第6章：單打與雙打比賽](Chapter6-SinglesAndDoublesPlay/index)
-- [第7章：訓練與比賽準備](Chapter7-TrainingAndMatchPreparation/index)
-- [結論](Conclusion/index)
-- [附錄](Appendix/index)
+- [前言](/Preface)
+- [第1章：熱身與準備活動](/Chapter1-WarmUpAndPreparation)
+- [第2章：基本動作與技巧](/Chapter2-BasicTechniques)
+- [第3章：發球與接發球](/Chapter3-ServingAndReceiving)
+- [第4章：網前截擊與防守](/Chapter4-VolleyAndDefense)
+- [第5章：進階技巧與戰術](/Chapter5-AdvancedTechniquesAndTactics)
+- [第6章：單打與雙打比賽](/Chapter6-SinglesAndDoublesPlay)
+- [第7章：訓練與比賽準備](/Chapter7-TrainingAndMatchPreparation)
+- [結論](/Conclusion)
+- [附錄](/Appendix)
