--- a/pages/Preface/index.mdx
+++ b/pages/Preface/index.mdx
@@ -1,36 +1,29 @@
 # 前言
 
-
 ## 作者簡介
-
 擁有多年軟式網球經驗，作者在本書中分享了豐富的知識與專業經驗。
 
 ## 寫作動機與目標
-
-作者以熱情推動這項運動，旨在幫助更多人提升網球技能，並強調軟式網球的重要性及其獨特魅力。
+- 推廣軟式網球運動
+- 幫助讀者提升網球技能
+- 強調軟式網球的重要性及獨特魅力
 
 ## 本書特色
-
-本書不僅涵蓋了軟式網球的基礎知識，還提供了實用的技巧和策略，幫助讀者提升技能。此外，書中還包含了許多實用的資源和建議，讓讀者能夠更好地理解和掌握這項運動。
+1. 涵蓋軟式網球基礎知識
+2. 提供實用技巧和策略
+3. 包含豐富資源和建議
+4. 採用條列大綱寫作方式，便於理解
 
 ## 本書架構
-
-本書共分為五章，分別介紹了軟式網球的基本知識、技巧、策略、資源和建議。
-
 1. 軟式網球的基本知識
 2. 軟式網球的技巧
 3. 軟式網球的策略
 4. 軟式網球的資源
 5. 軟式網球的建議
 
-## 本書內容
+## 寫作目的
+1. 幫助讀者認識軟式網球運動
+2. 引導讀者從了解到欣賞這項運動
+3. 提供系統化的軟式網球知識結構
 
-本書內容涵蓋了軟式網球的基本知識、技巧、策略、資源和建議，幫助讀者提升技能。此外，書中還包含了許多實用的資源和建議，讓讀者能夠更好地理解和掌握這項運動。
-
-## 本書的寫作方式
-
-本書的寫作方式是採用問答的方式，讓讀者能夠更好地理解和掌握這項運動。
-
-## 本書的寫作目的
-
-本書的寫作目的是幫助讀者提升技能，並且讓讀者能夠更好地理解和掌握這項運動。  
+本書旨在為讀者提供全面的軟式網球指南，從基礎知識到進階策略，幫助讀者更好地理解和掌握這項運動。
