--- a/pages/_app.mdx
+++ b/pages/_app.mdx
@@ -4,7 +4,7 @@ import 'nextra-theme-docs/style.css'
 export default function App({ Component, pageProps }) {
   return (
     <>
-      <GoogleAnalytics gaId={process.env.NEXT_PUBLIC_GA_MEASUREMENT_ID} trackPageViews/>
+      <GoogleAnalytics strategy="lazyOnload" />
       <Component {...pageProps} />
     </>
   )
