--- a/pages/_app.mdx
+++ b/pages/_app.mdx
@@ -4,7 +4,7 @@ import 'nextra-theme-docs/style.css'
 export default function App({ Component, pageProps }) {
   return (
     <>
-      <GoogleAnalytics trackPageViews />
+      <GoogleAnalytics strategy="lazyOnload" trackPageViews />
       <Component {...pageProps} />
     </>
   )
